docs: finished page header

--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -2,24 +2,23 @@
 <!-- Metro Components -->
    <li>
       <a href="#metro-components" class="nav-header">Advanced Components</a>
+   </li>
+   <li>
+      <a href="#page-components">Page components</a>
       <ul class="nav">
-
-         <li>
-            <a href="#page-components">Page components</a>
-            <ul class="nav">
-               <li><a href="#type-components-page-header">Page header</a></li>
-               <li><a href="#type-components-metro-page-header">Page header with back button</a></li>
-               <li><a href="#type-components-hero">Hero</a></li>
-            </ul>
-         </li>
-
-         <li><a href="#metro-commands">Command Buttons</a></li>
-         <li><a href="#metro-progress">Metro Progress Bars</a></li>
-         <li><a href="#metro-modals">Modal</a></li>
-         <li><a href="#metro-datepicker">DatePicker</a></li>
-         <li><a href="#metro-flipview">FlipView</a></li>
-         <li><a href="#metro-pivot">Pivot</a></li>
-         <li><a href="#metro-toast">Toast Notification</a></li>
+         <li><a href="#type-components-page-header">Page header</a></li>
+         <li><a href="#type-components-metro-page-header1">Page header with back button</a></li>
+         <li><a href="#type-components-metro-page-header2">Page header subtitle &amp; back button</a></li>
+         <li><a href="#type-components-metro-page-header3">Page header with back button &amp; nav menu</a></li>
+         <li><a href="#type-components-hero">Hero</a></li>
       </ul>
    </li>
+
+   <li><a href="#metro-commands">Command Buttons</a></li>
+   <li><a href="#metro-progress">Metro Progress Bars</a></li>
+   <li><a href="#metro-modals">Modal</a></li>
+   <li><a href="#metro-datepicker">DatePicker</a></li>
+   <li><a href="#metro-flipview">FlipView</a></li>
+   <li><a href="#metro-pivot">Pivot</a></li>
+   <li><a href="#metro-toast">Toast Notification</a></li>
 </ul>
