--- a/less/bootmetro/progress-bars.less
+++ b/less/bootmetro/progress-bars.less
@@ -9,6 +9,10 @@ Progress control. */
    .no-border-radius;
    height: auto;
 
+   .bar {
+      height: 5px;
+   }
+
    &.progress-indeterminate {
       background-color: transparent;
       height: auto;
