--- a/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
@@ -2,6 +2,13 @@
    <!-- Components -->
    <li><a href="#components" class="nav-header">Components</a></li>
    <li>
+      <a href="#metro-commands">Command Buttons&nbsp;<span class="badge badge-success">new</span></a>
+      <ul class="nav">
+         <li><a href="#metro-commands-example">Examples</a></li>
+         <li><a href="#metro-commands-custom">Customization</a></li>
+      </ul>
+   </li>
+   <li>
       <a href="#dropdowns">Dropdowns</a>
       <ul class="nav">
          <li><a href="#dropdowns-example">Example</a></li>
@@ -78,7 +85,9 @@
          <li><a href="#progress-determinate">Determinate progress bar</a></li>
          <li><a href="#progress-stacked">Stacked</a></li>
          <li><a href="#progress-alternatives">Contextual alternatives</a></li>
-         <li><a href="#progress-striped">Striped</a></li>
+         <li><a href="#progress-indeterminate">Indeterminate&nbsp;<span class="badge badge-success">new</span></a></li>
+         <li><a href="#progress-indeterminate-ring">Indeterminate Ring&nbsp;<span class="badge badge-success">new</span></a></li>
+         <!--<li><a href="#progress-striped">Striped</a></li>-->
          <!--<li><a href="#progress-animated">Animated</a></li>-->
       </ul>
    </li>
